--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <i class="fab fa-youtube yt"></i>
 
         <p class="copyright">Copyright &copy; 2021-22 Singh Inc.</p>
-        <p class="credit">Made By ❤<a href="https://github.com/adarshsingh1083">Adarsh Singh</a></p>
-        <p class="credit">My Another Project(site) <a href="https://adarshsingh1083.github.io/TinDog/">TinDog</a> </p>
+        <p class="credit">Made By ❤<a target="main" href="https://github.com/adarshsingh1083">Adarsh Singh</a></p>
+        <p class="credit">My Another Project(site) <a target="main" href="https://adarshsingh1083.github.io/TinDog/">TinDog</a> </p>
          
 
       </div>
