--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <p class="copyright">Copyright &copy; 2021-22 Singh Inc.</p>
         <p class="credit">Made By ❤<a target="main" href="https://github.com/adarshsingh1083">Adarsh Singh</a></p>
-        <p class="credit">My Another Project(site) <a target="main" href="https://adarshsingh1083.github.io/TinDog/">TinDog</a> </p>
+        <p class="credit">My Another Project(site) <a target="main" href="https://ftadarshsingh.github.io/TinDog/">TinDog</a> </p>
          
 
       </div>
