--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <section id="me">
         <div class="profile">
-          <img src="images/profile.png" alt="Adarsh Singh'image" width="150px" />
+          <img src="images/profile.jpeg" alt="Adarsh Singh'image" width="150px" />
           <h1>Hello</h1>
           <p>
             <em>My Name is Adarsh I'm from Ballia. My Hobby is Video Editing,
